fixed logic with search icon and added min-height to notefield on small screens

--- a/css/stylesheetEditor.css
+++ b/css/stylesheetEditor.css
@@ -118,6 +118,10 @@ a {
   font-size: 1.45em;
   text-align: center;
 }
+#searchNote {
+  display: none;
+}
+
 #faSearch {
   opacity: 0.8;
   color: rgba(255,255,255,0.9) !important;
@@ -176,14 +180,32 @@ a {
 /*** Search input field ***/
 #noteSearch {
   display: inline-block;
+/*  width: 196px;   
+  padding: 3px 4px;  
+  margin: 10px;    
+  border-bottom: 1px solid rgba(58,56,56, 0.596);   
+  border-radius: 5px;*/
+}
+/*
+#noteSearchHd {
+  display: none;
+}*/
+
+#noteSearchHd {
+  padding: 4px 2px;
+  margin: 12px auto;
+}
+.note-search-hd {
+  display: none;  
+}
+
+.note-search {
   width: 196px;   
+  background-color: rgb(42, 43, 43);
   padding: 3px 4px;  
   margin: 10px;    
   border-bottom: 1px solid rgba(58,56,56, 0.596);   
   border-radius: 5px;
-}
-.note-search {
-  background-color: rgb(42, 43, 43);
 }
 .note-search-sky {
   background-color: rgb(242,243,243);
@@ -782,7 +804,9 @@ span.tag-container { /*2018/12/04*/
   .nav-ul li {
     text-align: center;
   }  
-
+  #searchNote {
+    display: block;
+  }
   #menuField {
     flex-grow: 1;
     flex-basis: 100%;
@@ -801,12 +825,11 @@ span.tag-container { /*2018/12/04*/
 
 #noteField {
   flex-basis: 100%;
+  max-height: 592px;
 }
-
 .note-item {
   padding: 20px;
 }
-
 .note-item .note-created, .note-item .note-modified {    
   margin-bottom: 8px;
   font-size: 0.75em;
@@ -872,7 +895,8 @@ span.tag-container { /*2018/12/04*/
   }
   /* Editor */
   .ql-editor {
-    padding: 32px 42px 32px 36px;    
+    padding: 32px 42px 32px 36px; 
+    min-height: 500px;   
   }
 }
 
